# Masterthesis

./: CMakeLists.txt  DEADJOE  MackeyGlass.cpp  Masterarbeit.cbp  Masterarbeit.depend  Masterarbeit.layout  README.md  Solutions.txt  changingK.ods  displaySolution.py  main.cpp
include/: LorentzAttractor.h  MackeyGlass.h  Mask.h  Narma10.h  Pulse.h  helper.h
src/: LorentzAttractor.cpp  Mask.cpp  Narma10.cpp  Pulse.cpp  TestSL.cpp  helper.cpp
